LinkedList - recent searches